fixed layout bug with sidebar and margin

--- a/src/components/navigation/navigationItems/styles.css
+++ b/src/components/navigation/navigationItems/styles.css
@@ -3,7 +3,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   color: #fff;
   font-size: 25px;
 }
