--- a/src/components/navigation/sidedraw/styles.css
+++ b/src/components/navigation/sidedraw/styles.css
@@ -5,9 +5,10 @@
   position: fixed;
   top: 0;
   left: 0;
+  bottom: 0;
+  right: 0;
   background-color: var(--purple);
   overflow-x: hidden;
-  padding-top: 60px;
   transition: 0.5s;
 }
 
