--- a/src/components/wrapper/styles.css
+++ b/src/components/wrapper/styles.css
@@ -1,5 +1,5 @@
-.Wrapper {
-  padding:20px;
+.Wrapper main {
+  padding: 20px;
 }
 
 .open {
